--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,2 +1,2 @@
-$font-primary: "Montserrat Regular", "Arial", sans-serif;
-$font-secondary: "Montserrat Medium", "Arial", sans-serif;
+$font-primary: "Montserrat-Regular", "Arial", sans-serif;
+$font-secondary: "Montserrat-Medium", "Arial", sans-serif;
