--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,24 +1,24 @@
 @font-face {
-  font-family: "Montserrat Regular";
-  src: url("../fonts/Montserrat Regular.eot"); /* IE9 Compat Modes */
-  src: url("../fonts/Montserrat Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-       url("../fonts/Montserrat Regular.woff2") format("woff2"), /* Pretty Modern Browsers */
-       url("../fonts/Montserrat Regular.woff") format("woff"), /* Pretty Modern Browsers */
-       url("../fonts/Montserrat Regular.ttf")  format("truetype"), /* Safari, Android, iOS */
-       url("../fonts/Montserrat Regular.svg") format("svg"); /* Legacy iOS */
+  font-family: "Montserrat-Regular";
+  src: url("../fonts/Montserrat-Regular.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/Montserrat-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+       url("../fonts/Montserrat-Regular.woff2") format("woff2"), /* Pretty Modern Browsers */
+       url("../fonts/Montserrat-Regular.woff") format("woff"), /* Pretty Modern Browsers */
+       url("../fonts/Montserrat-Regular.ttf")  format("truetype"), /* Safari, Android, iOS */
+       url("../fonts/Montserrat-Regular.svg") format("svg"); /* Legacy iOS */
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Montserrat Medium";
-  src: url("../fonts/Montserrat Medium.eot"); /* IE9 Compat Modes */
-  src: url("../fonts/Montserrat Medium.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-       url("../fonts/Montserrat Medium.woff2") format("woff2"), /* Pretty Modern Browsers */
-       url("../fonts/Montserrat Medium.woff") format("woff"), /* Pretty Modern Browsers */
-       url("../fonts/Montserrat Medium.ttf")  format("truetype"), /* Safari, Android, iOS */
-       url("../fonts/Montserrat Medium.svg") format("svg"); /* Legacy iOS */
+  font-family: "Montserrat-Medium";
+  src: url("../fonts/Montserrat-Medium.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/Montserrat-Medium.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+       url("../fonts/Montserrat-Medium.woff2") format("woff2"), /* Pretty Modern Browsers */
+       url("../fonts/Montserrat-Medium.woff") format("woff"), /* Pretty Modern Browsers */
+       url("../fonts/Montserrat-Medium.ttf")  format("truetype"), /* Safari, Android, iOS */
+       url("../fonts/Montserrat-Medium.svg") format("svg"); /* Legacy iOS */
   font-weight: 500;
   font-style: normal;
   font-display: swap;
