--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,4 +1,95 @@
 .intro {
+  position: relative;
   height: 880px;
+  background-image: url("../img/background-intro.jpg");
   background-color: #c4eeff;
+}
+
+.intro__overlay {
+  height: 880px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.intro__text {
+  position: absolute;
+  margin-right: 30px;
+  margin-top: 30px;
+  width: 680px;
+  top: 208px;
+  right: 0;
+  color: #ffffff;
+
+  &--title {
+    font-family: $font-title;
+    font-size: 42px;
+    line-height: 48px;
+    letter-spacing: 1.2px;
+  }
+
+  &--title span {
+    color: #fe8057;
+  }
+
+  &--description {
+    position: relative;
+    width: 380px;
+    margin-top: 35px;
+    margin-left: 216px;
+    font-family: $font-description;
+
+    &::before {
+      position: absolute;
+      content: "";
+      top: -7px;
+      left: -197px;
+      width: 179px;
+      height: 65px;
+      background-image: url("../img/stars.png");
+      background-repeat: no-repeat;
+    }
+  }
+
+  &--button {
+    padding: 10px 70px;
+    margin-top: 52px;
+    margin-left: 219px;
+    font-family: $font-secondary;
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    background-color: #fe8057;
+    color: #ffffff;
+    border: 2px solid #fe8057;
+    border-radius: 4px;
+    border-radius: 4px;
+
+    &:hover {
+      background-color: transparent;
+    }
+  }
+}
+
+.intro__footer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  left: 50%;
+  bottom: 44px;
+  margin-left: -67px;
+  width: 134px;
+  font-family: "Montserrat-SemiBold", "Arial", sans-serif;
+  font-size: 12px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
+
+  &--image {
+    width: 24px;
+    height: 39px;
+    background-image: url("../img/mouse.png");
+  }
+
+  &--decsription {
+    padding-top: 16px;
+  }
 }
