--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -6,7 +6,7 @@
        url("../fonts/Montserrat-Regular.woff") format("woff"), /* Pretty Modern Browsers */
        url("../fonts/Montserrat-Regular.ttf")  format("truetype"), /* Safari, Android, iOS */
        url("../fonts/Montserrat-Regular.svg") format("svg"); /* Legacy iOS */
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
@@ -20,6 +20,45 @@
        url("../fonts/Montserrat-Medium.ttf")  format("truetype"), /* Safari, Android, iOS */
        url("../fonts/Montserrat-Medium.svg") format("svg"); /* Legacy iOS */
   font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat-SemiBold";
+  src: url("../fonts/Montserrat-SemiBold.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/Montserrat-SemiBold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+       url("../fonts/Montserrat-SemiBold.woff2") format("woff2"), /* Pretty Modern Browsers */
+       url("../fonts/Montserrat-SemiBold.woff") format("woff"), /* Pretty Modern Browsers */
+       url("../fonts/Montserrat-SemiBold.ttf")  format("truetype"), /* Safari, Android, iOS */
+       url("../fonts/Montserrat-SemiBold.svg") format("svg"); /* Legacy iOS */
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat-ExtraBold";
+  src: url("../fonts/Montserrat-ExtraBold.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/Montserrat-ExtraBold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+       url("../fonts/Montserrat-ExtraBold.woff2") format("woff2"), /* Pretty Modern Browsers */
+       url("../fonts/Montserrat-ExtraBold.woff") format("woff"), /* Pretty Modern Browsers */
+       url("../fonts/Montserrat-ExtraBold.ttf")  format("truetype"), /* Safari, Android, iOS */
+       url("../fonts/Montserrat-ExtraBold.svg") format("svg"); /* Legacy iOS */
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "OpenSansRegular";
+  src: url("../fonts/OpenSansRegular.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/OpenSansRegular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+       url("../fonts/OpenSansRegular.woff2") format("woff2"), /* Pretty Modern Browsers */
+       url("../fonts/OpenSansRegular.woff") format("woff"), /* Pretty Modern Browsers */
+       url("../fonts/OpenSansRegular.ttf")  format("truetype"), /* Safari, Android, iOS */
+       url("../fonts/OpenSansRegular.svg") format("svg"); /* Legacy iOS */
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
