--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -77,7 +77,7 @@
   bottom: 44px;
   margin-left: -67px;
   width: 134px;
-  font-family: "Montserrat-SemiBold", "Arial", sans-serif;
+  font-family: $font-text;
   font-size: 12px;
   line-height: 24px;
   text-transform: uppercase;
@@ -87,6 +87,7 @@
     width: 24px;
     height: 39px;
     background-image: url("../img/mouse.png");
+    background-repeat: no-repeat;
   }
 
   &--decsription {
