--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,9 @@
 @import "base.scss";
 @import "variables.scss";
 @import "fonts.scss";
+@import "blocks/page.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-nav.scss";
 @import "blocks/intro.scss";
+@import "blocks/programs.scss";
 
