--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,3 +2,4 @@ $font-primary: "Montserrat-Regular", "Arial", sans-serif;
 $font-secondary: "Montserrat-Medium", "Arial", sans-serif;
 $font-title: "Montserrat-ExtraBold", "Arial", sans-serif;
 $font-description: "OpenSansRegular", "Arial", sans-serif;
+$font-text: "Montserrat-SemiBold", "Arial", sans-serif;
