--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,3 +1,5 @@
+$desktop-width: 1280px;
+$tablet-width: 1024px;
 $font-primary: "Montserrat-Regular", "Arial", sans-serif;
 $font-secondary: "Montserrat-Medium", "Arial", sans-serif;
 $font-title: "Montserrat-ExtraBold", "Arial", sans-serif;
