--- a/source/sass/blocks/page-nav.scss
+++ b/source/sass/blocks/page-nav.scss
@@ -1,76 +1,195 @@
-.page-nav__wrapper {
-  display: flex;
-  align-items: center;
-}
+@media (min-width: $tablet-width) {
 
-.page-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: $font-primary;
-  font-size: 16px;
-  line-height: 12px;
-  color: #ffffff;
-}
-
-.page-nav a {
-  color: #ffffff;
-}
-
-.page-nav__region {
-  padding-left: 41px;
-}
-
-.page-nav__phone {
-  position: relative;
-  padding-left: 56px;
-
-  &::before {
-    position: absolute;
-    content: "";
-    width: 14px;
-    height: 14px;
-    top: -3px;
-    left: 37px;
-    background-image: url("../img/phone.png");
-    background-repeat: no-repeat;
+  .page-nav__wrapper {
+    display: flex;
+    align-items: center;
   }
-}
 
-.page-nav__list {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  padding-left: 34px;
-  list-style: none;
-}
+  .page-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: $font-primary;
+    font-size: 14px;
+    line-height: 12px;
+    color: #ffffff;
+  }
 
-.page-nav__item {
-  padding-right: 36px;
+  .page-nav a {
+    color: #ffffff;
+  }
 
-  &--link {
+  .page-nav__logo img {
+    width: 108px;
+  }
+
+  .page-nav__region {
+    padding-left: 34px;
+  }
+
+  .page-nav__phone {
+    position: relative;
+    padding-left: 45px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      width: 14px;
+      height: 14px;
+      top: -1px;
+      left: 26px;
+      background-image: url("../img/phone.png");
+      background-repeat: no-repeat;
+    }
+  }
+
+  .page-nav__list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    padding-left: 34px;
+    list-style: none;
+  }
+
+  .page-nav__item {
+    padding-right: 33px;
+
+    &--link {
+      &:hover {
+        border-bottom: 2px solid #fe8057;
+      }
+    }
+  }
+
+  .page-nav__button {
+    font-family: $font-secondary;
+    font-size: 10px;
+    padding: 11px 21px;
+    color: #ffffff;
+    border: 2px solid #fe8057;
+    border-radius: 4px;
+
     &:hover {
-      border-bottom: 2px solid #fe8057;
+      background-color: #fe8057;
+    }
+  }
+
+  .page-nav__acces {
+
+    a {
+      font-family: $font-secondary;
+      color: #000000;
+    }
+
+    &--registration {
+      padding-top: 30px;
+      padding-left: 30px;
+      padding-bottom: 10px;
+    }
+
+    &--entrance {
+      padding-top: 10px;
+      padding-left: 30px;
+      padding-bottom: 10px;
+    }
+
+    &--opened {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      width: 165px;
+      height: 110px;
+      top: 115px;
+      right: 35px;
+      background-color: #ffffff;
+      border-radius: 10px 0 10px 10px;
+    }
+
+    &--closed {
+      display: none;
+    }
+  }
+
+  .page-nav__burger {
+    display: block;
+
+    &--hidden {
+      display: none;
+    }
+  }
+
+  .page-nav__burger-button {
+    padding: 0;
+    padding-left: 34px;
+  }
+
+  .page-nav__togle-button {
+    display: none;
+    padding: 0;
+    padding-left: 43px;
+
+    &--opened {
+      display: block;
     }
   }
 }
 
-.page-nav__button {
-  font-family: $font-secondary;
-  font-size: 12px;
-  padding: 10px 35px;
-  color: #ffffff;
-  border: 2px solid #fe8057;
-  border-radius: 4px;
+@media (min-width: $desktop-width) {
 
-  &:hover {
-    background-color: #fe8057;
+  .page-nav__wrapper {
+    display: flex;
+    align-items: center;
   }
-}
 
-.page-nav__acces {
+  .page-nav {
+    font-size: 16px;
+  }
 
-  &--entrance {
-    padding-left: 25px;
+  .page-nav a {
+    color: #ffffff;
+  }
+
+  .page-nav__logo img {
+    width: 111px;
+  }
+
+  .page-nav__region {
+    padding-left: 41px;
+  }
+
+  .page-nav__phone {
+    padding-left: 56px;
+
+    &::before {
+      top: -3px;
+      left: 37px;
+    }
+  }
+
+  .page-nav__item {
+    padding-right: 36px;
+
+    &--link {
+      &:hover {
+        border-bottom: 2px solid #fe8057;
+      }
+    }
+  }
+
+  .page-nav__button {
+    font-size: 12px;
+    padding: 10px 35px;
+  }
+
+  .page-nav__acces {
+    display: block;
+
+    &--entrance {
+      padding-left: 25px;
+    }
+  }
+
+  .page-nav__burger {
+    display: none;
   }
 }
