--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,8 @@
 @import "base.scss";
 @import "variables.scss";
 @import "fonts.scss";
+@import "slick.scss";
+@import "slick-theme.scss";
 @import "blocks/page.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-nav.scss";
