--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,28 +1,92 @@
-@media (min-width: $tablet-width) {
-  .intro {
+.intro {
+  position: relative;
+  height: 480px;
+  background-image: url("../img/background-intro-mobile.jpg");
+  background-repeat: no-repeat;
+  background-color: #c4eeff;
+}
+
+.intro__overlay {
+  height: 480px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.intro__text {
+  position: absolute;
+  width: 320px;
+  top: 153px;
+  color: #ffffff;
+
+  &--title {
+    font-family: $font-title;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  &--title span {
+    color: #fe8057;
+  }
+
+  &--description {
     position: relative;
+    width: 300px;
+    margin-top: 41px;
+    margin-left: 10px;
+    font-family: $font-description;
+    font-size: 12px;
+    text-align: center;
+    line-height: 16px;
+
+    &::before {
+      display: none;
+    }
+  }
+
+  &--button {
+    padding: 10px 70px;
+    margin-top: 66px;
+    margin-left: 9px;
+    font-family: $font-secondary;
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    background-color: #fe8057;
+    color: #ffffff;
+    border: 2px solid #fe8057;
+    border-radius: 4px;
+    border-radius: 4px;
+
+    &:hover {
+      background-color: transparent;
+    }
+  }
+}
+
+.intro__footer {
+  display: none;
+}
+
+@media (min-width: $tablet-width) {
+
+  .intro {
     height: 768px;
     background-image: url("../img/background-intro-tablet.jpg");
-    background-color: #c4eeff;
   }
 
   .intro__overlay {
     height: 768px;
-    background-color: rgba(0, 0, 0, 0.4);
   }
 
   .intro__text {
-    position: absolute;
     margin-right: 30px;
     margin-top: 30px;
     width: 526px;
     top: 208px;
     right: 0;
-    color: #ffffff;
 
     &--title {
-      font-family: $font-title;
       font-size: 36px;
+      text-align: unset;
       line-height: 42px;
       letter-spacing: 0.8px;
     }
@@ -32,13 +96,12 @@
     }
 
     &--description {
-      position: relative;
       width: 395px;
       margin-top: 35px;
       margin-left: 108px;
-      font-family: $font-description;
       font-size: 14px;
       line-height: 18px;
+      text-align: unset;
 
       &::before {
         display: none;
@@ -115,10 +178,12 @@
     &--description {
       width: 380px;
       margin-top: 35px;
+      margin-left: 216px;
       font-size: 16px;
       line-height: 20px;
 
       &::before {
+        display: block;
         position: absolute;
         content: "";
         top: -7px;
@@ -131,7 +196,7 @@
     }
 
     &--button {
-      margin-top: 52px;
+      margin-top: 58px;
       margin-left: 219px;
     }
   }
