--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,5 +1,6 @@
-$desktop-width: 1280px;
+$mobile-width: 320px;
 $tablet-width: 1024px;
+$desktop-width: 1280px;
 $font-primary: "Montserrat-Regular", "Arial", sans-serif;
 $font-secondary: "Montserrat-Medium", "Arial", sans-serif;
 $font-title: "Montserrat-ExtraBold", "Arial", sans-serif;
